header css fix spacing remove

--- a/WEB/src/components/Header/styles.css
+++ b/WEB/src/components/Header/styles.css
@@ -17,7 +17,7 @@
     font-family: "Times New Roman", Times, serif;
     background-color: rgb(255, 248, 41);
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 
 }
 
